package patterns.behavioral.strategy;

public interface SinavStratejisi {

	Ders getBirinci();
	Ders getIkinci();
	Ders getUcuncu();
	Ders getDorduncu();
}
